<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView" >
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_view"
    tools:context="com.soubao.tpshop.activity.person.user.SPUserDetailsActivity">


    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:layout_height="80dp"
        android:text="@string/user_head"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/textView2"
        android:src="@drawable/arrow_right"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.soubao.tpshop.view.SPMoreImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/head_mimgv"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toLeftOf="@+id/imageView"
        android:src="@drawable/person_default_head" />
    <View android:id="@+id/line1"
        style="@style/separator_line" android:layout_below="@+id/textView2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:text="@string/user_phone"
        android:id="@+id/textView3"
        android:layout_below="@+id/line1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:text="132455"
        android:id="@+id/phone_num_txt"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <View android:id="@+id/line2"
        style="@style/separator_line" android:layout_below="@+id/textView3"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:text="@string/user_nick"
        android:id="@+id/textView5"
        android:layout_below="@+id/line2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:id="@+id/nick_arrow"
        android:layout_alignBottom="@+id/textView5"
        android:src="@drawable/arrow_right"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:text="Ben"
        android:id="@+id/nickname_txtv"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toLeftOf="@+id/nick_arrow" />
    <View android:id="@+id/line3"
        style="@style/separator_line" android:layout_below="@+id/textView5"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_sex"
        android:id="@+id/txt_sex"
        android:layout_below="@+id/line3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:id="@+id/nick_arrow_sex"
        android:layout_alignBottom="@+id/txt_sex"
        android:src="@drawable/arrow_right"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="男"
        android:id="@+id/sex_txtv"
        android:layout_alignBottom="@+id/txt_sex"
        android:layout_toLeftOf="@+id/nick_arrow_sex" />
    <View android:id="@+id/line4"
        style="@style/separator_line" android:layout_below="@+id/txt_sex"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_age"
        android:id="@+id/age_txt"
        android:layout_below="@+id/line4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:id="@+id/nick_arrow_age"
        android:layout_alignBottom="@+id/age_txt"
        android:src="@drawable/arrow_right"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        style="@style/textStyle.Medium.User"
        android:text="1989-11-2"
        android:id="@+id/age_txtv"
        android:layout_alignBottom="@+id/age_txt"
        android:layout_toLeftOf="@+id/nick_arrow_age" />

    <View android:id="@+id/line5"
        style="@style/separator_line" android:layout_below="@+id/age_txt"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/user_save"
        android:id="@+id/btn_save"
        style="@style/button_style"
        android:layout_below="@+id/line5"
        android:layout_marginTop="20dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


</RelativeLayout>
</ScrollView>
