<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dip"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="horizontal"
    android:background="@color/bg_activity"
	android:paddingBottom="@dimen/margin_space"
	android:paddingTop="@dimen/margin_space">
    
    
        <LinearLayout 
            android:id="@+id/home_menu_categroy_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:background="@drawable/view_bg_clickable_selector"
            android:orientation="vertical"
            android:gravity="center">
            
             <ImageView 
                android:id="@+id/home_menu_categroy_imgv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/icon_categroy_home"/>
             
             <TextView
		        android:id="@+id/home_menu_categroy_txtv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_item_category"
		        android:layout_marginTop="@dimen/home_menu_text_top"
		        android:textColor="@color/color_font_gray"
				 android:textSize="@dimen/font_size_normal"/>
        </LinearLayout>
        
         <LinearLayout 
            android:id="@+id/home_menu_shopcart_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:background="@drawable/view_bg_clickable_selector"
            android:orientation="vertical"
            android:gravity="center">
            
             <ImageView 
                android:id="@+id/home_menu_shopcart_imgv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/icon_shopcart_home"/>
             
             <TextView
		        android:id="@+id/home_menu_shopcart_txtv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_item_shopcatd"
		        android:layout_marginTop="@dimen/home_menu_text_top"
				 android:textColor="@color/color_font_gray"
				 android:textSize="@dimen/font_size_normal"/>
        </LinearLayout>
    
         <LinearLayout 
            android:id="@+id/home_menu_order_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:background="@drawable/view_bg_clickable_selector"
            android:orientation="vertical"
            android:gravity="center">
            
             <ImageView 
                android:id="@+id/home_menu_order_imgv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/icon_order_home"/>
             
             <TextView
		        android:id="@+id/home_menu_order_txtv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/text_item_order"
		        android:layout_marginTop="@dimen/home_menu_text_top"
				 android:textColor="@color/color_font_gray"
				 android:textSize="@dimen/font_size_normal"/>
        </LinearLayout>
        
         <LinearLayout 
            android:id="@+id/home_menu_coupon_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:clickable="true"
            android:background="@drawable/view_bg_clickable_selector"
            android:orientation="vertical"
            android:gravity="center">
            
             <ImageView 
                android:id="@+id/home_menu_coupon_imgv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/icon_coupon_home"/>
             
             <TextView
		        android:id="@+id/home_menu_coupon_txtv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/person_goods_collect"
		        android:layout_marginTop="@dimen/home_menu_text_top"
				 android:textColor="@color/color_font_gray"
		        android:textSize="@dimen/font_size_normal"/>
        </LinearLayout>
</LinearLayout>